[package]
name = "lm-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
anyhow = "1"
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "tracing"] }
http = "1"
http-body = "1"
pin-project = "1"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sync_wrapper = { version = "1", features = ["futures"] }
toml = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "process", "sync", "signal"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
